XO_Project_UAT/Project--XOGrp--UAT/src/objects/zqu__ZFeature__c.object
<CustomObject>
    <description>The Zuora Feature Object.</description>
    <fields>
        <fullName>zqu__BillingEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Entity</label>
        <referenceTo>zqu__BillingEntity__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Catalog_Sync_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product link to catalog sync history</description>
        <inlineHelpText>Product link to catalog sync history</inlineHelpText>
        <label>Catalog Sync History</label>
        <referenceTo>zqu__Catalog_Sync_History__c</referenceTo>
        <relationshipLabel>ZFeatures</relationshipLabel>
        <relationshipName>ZFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__BillingEntity__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EntityID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__FeatureName__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Status2__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <label>Status(Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SyncMessage__c</fullName>
        <description>Message for the Catalog Sync</description>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__SyncStatus__c</fullName>
        <label>Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syncing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Feature</label>
    <listViews>
        <fullName>zqu__All_Features</fullName>
        <columns>NAME</columns>
        <columns>zqu__ZuoraId__c</columns>
        <columns>zqu__Code__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__Description__c</columns>
        <columns>zqu__Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Features</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>